# Dynamic-Object-Motion-Analysis

./: .gitignore  README.md  pyproject.toml
doma/: cli.py  detectors.py  flow.py  motion.py  viz.py
experiments/tracking/: README.md  hand_tracker.py  main.py  optical_flow.py  report.tex
experiments/tracking/Ultralytics/: settings.json
notebooks/: Optical Flow-Based Tracking Farnebäck.ipynb  Optical Flow-Based Tracking.ipynb
notebooks/.ipynb_checkpoints/: Optical Flow-Based Tracking Farnebäck-checkpoint.ipynb
