[project]
name = "dynamic-object-motion-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "MMyster",email = "mouradlatoundji@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "matplotlib>=3.8",
    "pandas>=2.2",
]

[tool.poetry]
packages = [{ include = "doma" }]

[project.optional-dependencies]
hand = [
    "mediapipe>=0.10.14",
]
yolo = [
    "ultralytics>=8.2",
]
raft = [
    "torch>=2.2",
    "torchvision>=0.17",
]

[project.scripts]
doma-live = "doma.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
